[gd_scene load_steps=4 format=3 uid="uid://b06lgbq8mk3u6"]

[ext_resource type="Script" path="res://user_interface/menu/buff_selection_menu/buff_card/buff_card.gd" id="1_rbof1"]
[ext_resource type="Texture2D" uid="uid://0p2wljhv44mx" path="res://icon.svg" id="2_cwgpx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avsfq"]
bg_color = Color(0.396078, 0.396078, 0.396078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="BuffCard" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_avsfq")
script = ExtResource("1_rbof1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BuffIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_cwgpx")
expand_mode = 2
stretch_mode = 4

[node name="BuffNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Name
"
horizontal_alignment = 1

[node name="BuffLevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "LV. 1 
"
horizontal_alignment = 1

[node name="BuffDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Description:
"

[node name="EmptyLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Empty"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
